# cpp_prop

./: CMakeLists.txt  README.md  constructive_logic.h  enhanced_prover.cpp  main.cpp  peano_prover.cpp  prover.cpp  template.h
.devcontainer/: devcontainer.json
tests/: CMakeLists.txt  test_logic.cpp
